--- a/coin/module_config.yaml
+++ b/coin/module_config.yaml
@@ -14,4 +14,11 @@ instructions:
       variableValue: "3600"
     - !include "{{qt/qtbase}}/coin_module_build_template_v2.yaml"
   Test:
+    - type: EnvironmentVariable
+      variableName: QTWEBENGINE_DISABLE_SANDBOX
+      variableValue: "1"
+      enable_if:
+        condition: property
+        property: target.osVersion
+        equals_value: QEMU
     - !include "{{qt/qtbase}}/coin_module_test_template_v3.yaml"
