Skip grab window and changeLocale() test on QEMU
Task-number: QTBUG-94911
Change-Id: Ia381d2914740d0b0172df1af707b6ca1bdfd3d8e
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/tests/auto/quick/qquickwebengineview/CMakeLists.txt
+++ b/tests/auto/quick/qquickwebengineview/CMakeLists.txt
@@ -9,5 +9,6 @@ qt_internal_add_test(tst_qquickwebengineview
         Qt::WebEngineQuick
         Qt::GuiPrivate
         Qt::WebEngineQuickPrivate
+        Qt::TestPrivate
         Test::Util
 )
