Support more than one flag in env var NINJAFLAGS for subproject
Change-Id: I2c854a0e6981cfc8a887fcbcfa5a738cd3d2f5d9
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -573,6 +573,8 @@ foreach(config ${configs})
         unset(sandboxTarget)
     endif()
 
+    string(REPLACE " " ";" NINJAFLAGS "$ENV{NINJAFLAGS}")
+
     add_custom_command(
         OUTPUT
             ${buildDir}/${config}/QtWebEngineCore.stamp
@@ -581,7 +583,7 @@ foreach(config ${configs})
         WORKING_DIRECTORY ${buildDir}/${config}
         COMMAND ${CMAKE_COMMAND} -E echo "Ninja ${config} build"
         COMMAND Ninja::ninja
-            $ENV{NINJAFLAGS}
+            ${NINJAFLAGS}
             -C ${buildDir}/${config}
             QtWebEngineCore ${sandboxTarget}
         USES_TERMINAL
