Add arm optimization flags to cmake build
Pick-to: dev
Change-Id: Ibab4630fd226f46f58d08c603436dc2c378212ec
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -252,13 +252,15 @@ endif()
 if(CMAKE_CROSSCOMPILING)
     externalproject_add(hostBuild
         SOURCE_DIR  ${CMAKE_CURRENT_LIST_DIR}/src/core/configure
-        BINARY_DIR  ${CMAKE_CURRENT_BINARY_DIR}/configure
-        PREFIX      cross
+        BINARY_DIR  ${CMAKE_CURRENT_BINARY_DIR}/host
+        PREFIX      host
         USES_TERMINAL_BUILD ON
         CMAKE_ARGS -DCMAKE_TOOLCHAIN_FILE=${QT_HOST_PATH}/lib/cmake/Qt6/qt.toolchain.cmake
                    -DWEBENGINE_ROOT_BUILD_DIR=${CMAKE_CURRENT_BINARY_DIR}
                    -DWEBENGINE_ROOT_SOURCE_DIR=${WEBENGINE_ROOT_SOURCE_DIR}
                    -DGN_TARGET_CPU=${TEST_architecture_arch}
+                   -DCMAKE_C_FLAGS=
+                   -DCMAKE_CXX_FLAGS=
     )
     externalproject_add_stepdependencies(qtwebengine install hostBuild)
 endif()
