Refactor cmake build
Add macros to share common cmake code blocks
with QtPdf. Reconsider later to do proper scoping
and change those to functions if make sense.

Change-Id: I500acdba1415feab373a012dcf9a9ddedf33cfac
(cherry picked from commit b3031066d17ef01802a4c9752f87675d6a4a1df5)
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/host/CMakeLists.txt
+++ b/src/host/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.19)
 
 if(NOT DEFINED WEBENGINE_ROOT_SOURCE_DIR)
-    get_filename_component(WEBENGINE_ROOT_SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/../../.." REALPATH)
+    get_filename_component(WEBENGINE_ROOT_SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/../.." REALPATH)
 endif()
 if (NOT DEFINED WEBENGINE_ROOT_BUILD_DIR)
-    get_filename_component(WEBENGINE_ROOT_BUILD_DIR "${CMAKE_CURRENT_BINARY_DIR}/../../.." REALPATH)
+    get_filename_component(WEBENGINE_ROOT_BUILD_DIR "${CMAKE_CURRENT_BINARY_DIR}/../.." REALPATH)
 endif()
 
 include(${WEBENGINE_ROOT_SOURCE_DIR}/.cmake.conf)
@@ -20,16 +20,19 @@ find_package(Qt6 ${PROJECT_VERSION} CONFIG REQUIRED COMPONENTS BuildInternals Co
 
 set(buildDir ${CMAKE_CURRENT_BINARY_DIR})
 configure_gn_toolchain(host ${TEST_architecture_arch} ${TEST_architecture_arch}
-    ${WEBENGINE_ROOT_SOURCE_DIR}/src/core/configure/BUILD.toolchain.gn.in
+    ${WEBENGINE_ROOT_SOURCE_DIR}/src/host/BUILD.toolchain.gn.in
     ${buildDir}/host_toolchain
 )
-install(FILES ${buildDir}/host_toolchain/BUILD.gn
-    DESTINATION ${WEBENGINE_ROOT_BUILD_DIR}/src/core/host_toolchain
-    )
 get_v8_arch(GN_V8_HOST_CPU ${GN_TARGET_CPU})
 configure_gn_toolchain(v8 ${GN_V8_HOST_CPU} ${GN_TARGET_CPU}
-    ${WEBENGINE_ROOT_SOURCE_DIR}/src/core/configure/BUILD.toolchain.gn.in
+    ${WEBENGINE_ROOT_SOURCE_DIR}/src/host/BUILD.toolchain.gn.in
     ${buildDir}/v8_toolchain)
-install(FILES ${buildDir}/v8_toolchain/BUILD.gn
-    DESTINATION ${WEBENGINE_ROOT_BUILD_DIR}/src/core/v8_toolchain
-)
+
+if(QT_FEATURE_qtwebengine_build)
+    install(FILES ${buildDir}/host_toolchain/BUILD.gn
+        DESTINATION ${WEBENGINE_ROOT_BUILD_DIR}/src/core/host_toolchain
+    )
+    install(FILES ${buildDir}/v8_toolchain/BUILD.gn
+        DESTINATION ${WEBENGINE_ROOT_BUILD_DIR}/src/core/v8_toolchain
+    )
+endif()
