Get rid of private methods of QWebEngineNewWindowRequest
Pick-to: 6.2
Change-Id: I40072b45ceffa1a2c92027a4c01239974b8ac498
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/src/core/api/CMakeLists.txt
+++ b/src/core/api/CMakeLists.txt
@@ -27,7 +27,7 @@ qt_internal_add_module(WebEngineCore
         qwebengineloadinginfo.cpp qwebengineloadinginfo.h
         qwebenginemessagepumpscheduler.cpp qwebenginemessagepumpscheduler_p.h
         qwebenginenavigationrequest.cpp qwebenginenavigationrequest.h
-        qwebenginenewwindowrequest.cpp qwebenginenewwindowrequest.h
+        qwebenginenewwindowrequest.cpp qwebenginenewwindowrequest.h qwebenginenewwindowrequest_p.h
         qwebenginenotification.cpp qwebenginenotification.h
         qwebenginepage.cpp qwebenginepage.h qwebenginepage_p.h
         qwebengineprofile.cpp qwebengineprofile.h qwebengineprofile_p.h
