Do not install QtWebEngineProcess twice
Pass NO_INSTALL, so that QtWebEngineProcess is not
installed into INSTALL_BINDIR. We have explicit install
rules further down below.

Pick-to: 6.2
Fixes: QTBUG-95153
Change-Id: I2dfae1e8a6bb9183d25590b7ba5cdb136252a1e4
Reviewed-by: Michal Klocek <michal.klocek@qt.io>

--- a/src/process/CMakeLists.txt
+++ b/src/process/CMakeLists.txt
@@ -8,7 +8,10 @@ find_package(Qt6 COMPONENTS Gui)
 get_target_property(qtWebEngineProcessName WebEngineCore QTWEBENGINEPROCESS_NAME)
 get_target_property(isFramework WebEngineCore FRAMEWORK)
 
-qt_internal_add_executable(${qtWebEngineProcessName} SOURCES main.cpp)
+qt_internal_add_executable(${qtWebEngineProcessName}
+    NO_INSTALL
+    SOURCES main.cpp
+)
 
 if(WIN32)
    target_sources(${qtWebEngineProcessName} PRIVATE support_win.cpp)
