Get rid of Quick's TestSupport API
- Moved TestInputContext and TestInputEvent APIs to tst_qmltests.
- Removed loadVisuallyCommitted and use Item.grabToImage to check if
  page is rendered.
- Removed windowCloseRejected signal and use a hidden callback instead.

Change-Id: Ica6e4c6017426e0171d738a6a59afa557c786698
Reviewed-by: Michal Klocek <michal.klocek@qt.io>
(cherry picked from commit 9c663f51c63f7661edcc604ce89171b3f037543d)
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/tests/auto/quick/qmltests/CMakeLists.txt
+++ b/tests/auto/quick/qmltests/CMakeLists.txt
@@ -5,8 +5,10 @@ qt_internal_add_test(tst_qmltests
     SOURCES
         tst_qmltests.cpp
     LIBRARIES
-        Qt::WebEngineQuick
+        Qt::GuiPrivate
         Qt::QuickTest
+        Qt::TestPrivate
+        Qt::WebEngineQuick
         Test::HttpServer
         Test::Util
 )
@@ -26,13 +28,17 @@ set(testList
     tst_fullScreenRequest.qml
     tst_geopermission.qml
     tst_getUserMedia.qml
+    tst_inputMethod.qml
+    tst_javaScriptDialogs.qml
     tst_keyboardEvents.qml
     tst_keyboardModifierMapping.qml
+    tst_linkHovered.qml
     tst_loadFail.qml
     tst_loadHtml.qml
     tst_loadProgress.qml
     tst_loadRecursionCrash.qml
     tst_loadUrl.qml
+    tst_mouseClick.qml
     tst_mouseMove.qml
     tst_navigationHistory.qml
     tst_navigationRequested.qml
@@ -54,16 +60,6 @@ endif()
 
 if(QT_FEATURE_ssl)
     list(APPEND testList tst_certificateError.qml)
-endif()
-
-if(QT_FEATURE_webenginequick_testsupport)
-    list(APPEND testList
-        tst_inputMethod.qml
-        tst_javaScriptDialogs.qml
-        tst_linkHovered.qml
-        tst_mouseClick.qml
-        tst_viewSoure.qml
-    )
 endif()
 
 set(content "")
