Fix missing toolchain error
Since d53f7fcc52 we require toolchain in certain cases.
Add super build check.

Add user notice that qttoolchain.cmake file is required.

Moreover WebEngine uses external project and cmake does
not support querying user defines from command line and
this issue is tracked here:

https://gitlab.kitware.com/cmake/cmake/-/issues/19622

Therefore we assume we get all the data from toolchain.

Fixes: QTBUG-94757
Task-number: QTBUG-94804
Task-number: QTBUG-95051
Task-number: QTBUG-94997
Pick-to: 6.2
Change-Id: Ibee121ac390892c28d2e6a388e73700a7e69a521
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,11 +107,15 @@ get_filename_component(WEBENGINE_ROOT_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}" R
 get_qt_features(featureList webengine)
 get_qt_features(featureList qtwebengine)
 
-if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
+if(NOT DEFINED CMAKE_TOOLCHAIN_FILE AND QT_SUPERBUILD)
     set(CMAKE_TOOLCHAIN_FILE "${CMAKE_BINARY_DIR}/qtbase/lib/cmake/Qt6/qt.toolchain.cmake")
     list(APPEND libsCmakeArgs
             "-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}"
     )
+endif()
+
+if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
+    message(FATAL_ERROR "QtWebEngine build requires CMAKE_TOOLCHAIN_FILE. Please provide one or use qt-cmake.")
 endif()
 
 list(TRANSFORM featureList PREPEND "-D")
